--- a/example/package.json
+++ b/example/package.json
@@ -11,8 +11,8 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "react": "18.0.0",
-    "react-native": "0.69.2"
+    "react": "18.1.0",
+    "react-native": "0.70.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -20,6 +20,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "metro-react-native-babel-preset": "^0.67.0",
     "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0"
+    "postinstall-postinstall": "^2.1.0",
+    "react-test-renderer": "18.1.0"
   }
 }
