SDK-787 add CI & CD workflow files for react native sdk

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "prepare": "bob build",
     "release": "release-it",
     "example": "yarn --cwd example",
-    "bootstrap": "yarn example && yarn && yarn example pods"
+    "bootstrap": "yarn example && yarn && yarn example pods",
+    "build": "bob build"
   },
   "keywords": [
     "react-native",
