--- a/.github/workflows/internal-release.yml
+++ b/.github/workflows/internal-release.yml
@@ -28,7 +28,7 @@ jobs:
       - name: npm build
         run: npm run build
 
-      - name: build react-sdk
+      - name: build react-native-sdk
         run: |
           curl -u ${{ secrets.JFROG_USERNAME }}:${{ secrets.JFROG_PASSWORD }} https://prekarilabs.jfrog.io/prekarilabs/api/npm/auth/ > ~/.npmrc
           npm config set registry https://prekarilabs.jfrog.io/prekarilabs/api/npm/npm/
