--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skyflow-react-native",
-  "version": "1.0.1-dev.18f799c",
+  "version": "1.1.0",
   "description": "Skyflow React Native SDK",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
