--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
     "@types/react": "17.0.21"
   },
   "peerDependencies": {
-    "react": "17.0.2",
-    "react-native": "0.65.3"
+    "react": "^17.0.2 || ^18.0.0",
+    "react-native": "^0.65.3"
   },
   "jest": {
     "preset": "react-native",
