--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   },
   "peerDependencies": {
     "react": "^17.0.2 || ^18.0.0",
-    "react-native": "^0.65.3"
+    "react-native": "^0.65.3 || ^0.66.0 || ^0.67.0 || ^0.68.0 || ^0.69.0 || ^0.70.0"
   },
   "jest": {
     "preset": "react-native",
