--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   },
   "peerDependencies": {
     "react": "^17.0.2 || ^18.0.0",
-    "react-native": "^0.65.3 || ^0.66.0 || ^0.67.0 || ^0.68.0 || ^0.69.0 || ^0.70.0"
+    "react-native": "^0.65.3 || ^0.66.0 || ^0.67.0 || ^0.68.0 || ^0.69.0 || ^0.70.0 || ^0.71.0 || ^0.72.0"
   },
   "jest": {
     "preset": "react-native",
@@ -132,7 +132,7 @@
   "dependencies": {
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "set-value": "^4.1.0",
-    "uuid": "^9.0.0"
+    "react-native-uuid": "^2.0.1",
+    "set-value": "^4.1.0"
   }
 }
