--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "typescript": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "prepare": "bob build",
-    "release": "release-it",
     "example": "yarn --cwd example",
     "bootstrap": "yarn example && yarn && yarn example pods",
     "build": "bob build"
@@ -45,7 +44,6 @@
     "@babel/eslint-parser": "^7.18.2",
     "@commitlint/config-conventional": "^17.0.2",
     "@react-native-community/eslint-config": "^3.0.2",
-    "@release-it/conventional-changelog": "^5.0.0",
     "@testing-library/react-native": "^11.3.0",
     "@types/jest": "^28.1.2",
     "@types/lodash": "^4.14.185",
@@ -59,10 +57,9 @@
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "18.0.0",
-    "react-native": "0.69.2",
+    "react-native": "^0.69.2",
     "react-native-builder-bob": "^0.18.3",
     "react-test-renderer": "^18.2.0",
-    "release-it": "^15.0.0",
     "typescript": "^4.5.2"
   },
   "resolutions": {
