DEX-420 feat: resolved merge conflicts

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "prepare": "bob build",
     "example": "yarn --cwd example",
     "bootstrap": "yarn example && yarn && yarn example pods",
-    "build": "bob build"
+    "build": "bob build",
+    "docs-gen": "node scripts/doc-gen/components-json-gen.js && node scripts/doc-gen/markdown-gen.js"
   },
   "keywords": [
     "react-native",
@@ -129,6 +130,7 @@
   "dependencies": {
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "react-docgen-typescript": "^2.2.2",
     "react-native-uuid": "^2.0.1",
     "set-value": "^4.1.0"
   }
