--- a/.github/workflows/update-refs-in-docs.yml
+++ b/.github/workflows/update-refs-in-docs.yml
@@ -31,8 +31,7 @@ jobs:
         # echo "github sha: $(git rev-parse --short "$GITHUB_SHA")"
         cd skyflow-react-native/skyflow-react-native/
         rm -r docs/
-        ls
-        git checkout -- package-lock.json
+        git clean -df
 
     - name: Create a branch in skyflow-docs
       env:
