--- a/.github/workflows/update-refs-in-docs.yml
+++ b/.github/workflows/update-refs-in-docs.yml
@@ -27,10 +27,10 @@ jobs:
         npm run docs-gen
         cd ../..
         mkdir refs
-        cp -r skyflow-react-native/skyflow-react-native/docs/* refs/
+        cp -r skyflow-react-native/skyflow-react-native/docs/markdown/* refs/
         # echo "github sha: $(git rev-parse --short "$GITHUB_SHA")"
         cd skyflow-react-native/skyflow-react-native/
-        rm -r docs/
+        # rm -r docs/
         git clean -df
 
     - name: Create a branch in skyflow-docs
