--- a/.github/workflows/update-refs-in-docs.yml
+++ b/.github/workflows/update-refs-in-docs.yml
@@ -45,7 +45,8 @@ jobs:
         cd $GITHUB_WORKSPACE
         git remote add skyflow-docs https://${TOKEN}@github.com/${REPO_OWNER}/${REPO_NAME}.git
         git fetch skyflow-docs main
-        BRANCH_NAME="feature-branch-${{ github.run_number }}"
+        # BRANCH_NAME="feature-branch-${{ github.run_number }}"
+        BRANCH_NAME="feature-branch-${{ "$(git rev-parse --short "$GITHUB_SHA")" }}"
         git remote set-url --push skyflow-docs https://${ACTOR}:${TOKEN}@github.com/${REPO_OWNER}/${REPO_NAME}.git
         git checkout -b $BRANCH_NAME skyflow-docs/main
         cp -r ../../refs/* src/pages/content/docs/sdks/skyflow-react-native/
