--- a/.github/workflows/update-refs-in-docs.yml
+++ b/.github/workflows/update-refs-in-docs.yml
@@ -22,7 +22,9 @@ jobs:
     - run: npm install
 
     - name: Set Short SHA
-      run: echo "SHORT_SHA=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
+      run: |
+        echo "SHORT_SHA=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
+        echo "SMALL_SHA=$(git rev-parse --short "$GITHUB_SHA" | cut -c1-3)" >> $GITHUB_ENV
       
     - name: Generate React Native SDK references
       run: |
@@ -31,7 +33,6 @@ jobs:
         cd ../..
         mkdir refs
         cp -r skyflow-react-native/skyflow-react-native/docs/markdown/* refs/
-        # echo "github sha: $(git rev-parse --short "$GITHUB_SHA")"
         cd skyflow-react-native/skyflow-react-native/
         rm -r lib/
         git clean -df
@@ -48,8 +49,7 @@ jobs:
         cd $GITHUB_WORKSPACE
         git remote add skyflow-docs https://${TOKEN}@github.com/${REPO_OWNER}/${REPO_NAME}.git
         git fetch skyflow-docs main
-        # BRANCH_NAME="feature-branch-${{ github.run_number }}"
-        BRANCH_NAME="feature-branch-${{ env.SHORT_SHA }}"
+        BRANCH_NAME="SDK-${{ env.SHORT_SHA }}/react-native"
         git remote set-url --push skyflow-docs https://${ACTOR}:${TOKEN}@github.com/${REPO_OWNER}/${REPO_NAME}.git
         git checkout -b $BRANCH_NAME skyflow-docs/main
         cp -r ../../refs/* src/pages/content/docs/sdks/skyflow-react-native/
@@ -63,7 +63,7 @@ jobs:
       run: |
         git config user.name ${{ github.actor }}
         git config user.email ${{ github.actor }}@users.noreply.github.com
-        BRANCH_NAME="feature-branch-${{ env.SHORT_SHA }}"
+        BRANCH_NAME="SDK-${{ env.SHORT_SHA }}/react-native"
         git add .
         
         # Check if there are changes to commit
@@ -72,9 +72,9 @@ jobs:
           git push skyflow-docs $BRANCH_NAME
           # Raise a pull request
           BASE_BRANCH="main"
-          BRANCH_NAME="feature-branch-${{ env.SHORT_SHA }}"
-          TITLE="DEX-${{ github.run_number }} Updated React Native SDK references"
-          BODY="This pull request adds the latest React Native SDK references."
+          BRANCH_NAME="SDK-${{ env.SHORT_SHA }}/react-native"
+          TITLE="SDK-${{ env.SMALL_SHA }}/react-native: Updated React Native SDK references"
+          BODY="This pull request adds the latest React Native SDK references. Commit id for reference: $GITHUB_SHA"
           API_URL="https://api.github.com/repos/${REPO_OWNER}/${REPO_NAME}/pulls"
           echo "API URL: $API_URL"       
           RESPONSE=$(curl -X POST \
