--- a/.github/workflows/update-refs-in-docs.yml
+++ b/.github/workflows/update-refs-in-docs.yml
@@ -20,11 +20,6 @@ jobs:
       with:
           node-version: 14.17.6
     - run: npm install
-
-    - name: Set Short SHA
-      run: |
-        echo "SHORT_SHA=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
-        echo "SMALL_SHA=$(git rev-parse --short "$GITHUB_SHA" | cut -c1-3)" >> $GITHUB_ENV
       
     - name: Generate React Native SDK references
       run: |
@@ -35,6 +30,7 @@ jobs:
         cp -r skyflow-react-native/skyflow-react-native/docs/markdown/* refs/
         cd skyflow-react-native/skyflow-react-native/
         rm -r lib/
+        echo "SHORT_SHA=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
         git clean -df
 
     - name: Create a branch in skyflow-docs
@@ -49,7 +45,8 @@ jobs:
         cd $GITHUB_WORKSPACE
         git remote add skyflow-docs https://${TOKEN}@github.com/${REPO_OWNER}/${REPO_NAME}.git
         git fetch skyflow-docs main
-        BRANCH_NAME="SDK-${{ env.SHORT_SHA }}/react-native"
+        # BRANCH_NAME="SDK-${{ env.SHORT_SHA }}/react-native"
+        BRANCH_NAME="SDK-${{ git rev-parse --short "$GITHUB_SHA" }}/react-native"
         git remote set-url --push skyflow-docs https://${ACTOR}:${TOKEN}@github.com/${REPO_OWNER}/${REPO_NAME}.git
         git checkout -b $BRANCH_NAME skyflow-docs/main
         cp -r ../../refs/* src/pages/content/docs/sdks/skyflow-react-native/
@@ -73,7 +70,7 @@ jobs:
           # Raise a pull request
           BASE_BRANCH="main"
           BRANCH_NAME="SDK-${{ env.SHORT_SHA }}/react-native"
-          TITLE="SDK-${{ env.SMALL_SHA }}/react-native: Updated React Native SDK references"
+          TITLE="SDK-${{ env.SHORT_SHA }}/react-native: Updated React Native SDK references"
           BODY="This pull request adds the latest React Native SDK references. Commit id for reference: $GITHUB_SHA"
           API_URL="https://api.github.com/repos/${REPO_OWNER}/${REPO_NAME}/pulls"
           echo "API URL: $API_URL"       
