--- a/.github/workflows/update-refs-in-docs.yml
+++ b/.github/workflows/update-refs-in-docs.yml
@@ -44,10 +44,12 @@ jobs:
         # Create a new branch in skyflow-docs
         cd $GITHUB_WORKSPACE
         git remote add skyflow-docs https://${TOKEN}@github.com/${REPO_OWNER}/${REPO_NAME}.git
-        git fetch skyflow-docs main
+        # git fetch skyflow-docs main
+        git fetch skyflow-docs sdk-test
         BRANCH_NAME="SDK-${{ env.SHORT_SHA }}/react-native"
         git remote set-url --push skyflow-docs https://${ACTOR}:${TOKEN}@github.com/${REPO_OWNER}/${REPO_NAME}.git
-        git checkout -b $BRANCH_NAME skyflow-docs/main
+        # git checkout -b $BRANCH_NAME skyflow-docs/main
+        git checkout -b $BRANCH_NAME skyflow-docs/sdk-test
         cp -r ../../refs/* src/pages/content/docs/sdks/skyflow-react-native/
 
     - name: Push files and raise a PR
@@ -64,10 +66,11 @@ jobs:
         
         # Check if there are changes to commit
         if [[ -n "$(git status --porcelain)" ]]; then
-          git commit -m "Added React Native SDK references"
+          git commit -m "SDK-${{ env.SHORT_SHA }} Added React Native SDK references"
           git push skyflow-docs $BRANCH_NAME
           # Raise a pull request
-          BASE_BRANCH="main"
+          # BASE_BRANCH="main"
+          BASE_BRANCH="sdk-test"
           BRANCH_NAME="SDK-${{ env.SHORT_SHA }}/react-native"
           TITLE="SDK-${{ env.SHORT_SHA }}/react-native: Updated React Native SDK references"
           BODY="This pull request adds the latest React Native SDK references. Commit id for reference: $GITHUB_SHA"
