--- a/.github/workflows/update-refs-in-docs.yml
+++ b/.github/workflows/update-refs-in-docs.yml
@@ -72,7 +72,7 @@ jobs:
           # BASE_BRANCH="main"
           BASE_BRANCH="sdk-test"
           BRANCH_NAME="SDK-${{ env.SHORT_SHA }}/react-native"
-          TITLE="SDK-${{ env.SHORT_SHA }}/react-native: Updated React Native SDK references"
+          TITLE="SDK-${{ env.SHORT_SHA }}/react-native: Updated react-native SDK references"
           BODY="This pull request adds the latest React Native SDK references. Commit id for reference: $GITHUB_SHA"
           API_URL="https://api.github.com/repos/${REPO_OWNER}/${REPO_NAME}/pulls"
           echo "API URL: $API_URL"       
