--- a/.github/workflows/update-refs-in-docs.yml
+++ b/.github/workflows/update-refs-in-docs.yml
@@ -44,12 +44,10 @@ jobs:
         # Create a new branch in skyflow-docs
         cd $GITHUB_WORKSPACE
         git remote add skyflow-docs https://${TOKEN}@github.com/${REPO_OWNER}/${REPO_NAME}.git
-        # git fetch skyflow-docs main
-        git fetch skyflow-docs sdk-test
+        git fetch skyflow-docs main
         BRANCH_NAME="SDK-${{ env.SHORT_SHA }}/react-native"
         git remote set-url --push skyflow-docs https://${ACTOR}:${TOKEN}@github.com/${REPO_OWNER}/${REPO_NAME}.git
-        # git checkout -b $BRANCH_NAME skyflow-docs/main
-        git checkout -b $BRANCH_NAME skyflow-docs/sdk-test
+        git checkout -b $BRANCH_NAME skyflow-docs/main
         cp -r ../../refs/* src/pages/content/docs/sdks/skyflow-react-native/
 
     - name: Push files and raise a PR
@@ -69,8 +67,7 @@ jobs:
           git commit -m "SDK-${{ env.SHORT_SHA }} Added React Native SDK references"
           git push skyflow-docs $BRANCH_NAME
           # Raise a pull request
-          # BASE_BRANCH="main"
-          BASE_BRANCH="sdk-test"
+          BASE_BRANCH="main"
           BRANCH_NAME="SDK-${{ env.SHORT_SHA }}/react-native"
           TITLE="SDK-${{ env.SHORT_SHA }}/react-native: Updated react-native SDK references"
           BODY="This pull request adds the latest React Native SDK references. Commit id for reference: $GITHUB_SHA"
