--- a/.github/workflows/update-refs-in-docs.yml
+++ b/.github/workflows/update-refs-in-docs.yml
@@ -45,7 +45,7 @@ jobs:
         cd $GITHUB_WORKSPACE
         git remote add skyflow-docs https://${TOKEN}@github.com/${REPO_OWNER}/${REPO_NAME}.git
         git fetch skyflow-docs main
-        BRANCH_NAME="SDK-${{ env.SHORT_SHA }}/react-native"
+        BRANCH_NAME="SDK/react-native/${{ env.SHORT_SHA }}"
         git remote set-url --push skyflow-docs https://${ACTOR}:${TOKEN}@github.com/${REPO_OWNER}/${REPO_NAME}.git
         git checkout -b $BRANCH_NAME skyflow-docs/main
         cp -r ../../refs/* src/pages/content/docs/sdks/skyflow-react-native/
@@ -59,7 +59,7 @@ jobs:
       run: |
         git config user.name ${{ github.actor }}
         git config user.email ${{ github.actor }}@users.noreply.github.com
-        BRANCH_NAME="SDK-${{ env.SHORT_SHA }}/react-native"
+        BRANCH_NAME="SDK/react-native/${{ env.SHORT_SHA }}"
         git add .
         
         # Check if there are changes to commit
@@ -68,7 +68,7 @@ jobs:
           git push skyflow-docs $BRANCH_NAME
           # Raise a pull request
           BASE_BRANCH="main"
-          BRANCH_NAME="SDK-${{ env.SHORT_SHA }}/react-native"
+          BRANCH_NAME="SDK/react-native/${{ env.SHORT_SHA }}"
           TITLE="SDK-${{ env.SHORT_SHA }}: Updated React Native SDK references"
           BODY="This pull request adds the latest React Native SDK references. Commit id for reference: $GITHUB_SHA"
           API_URL="https://api.github.com/repos/${REPO_OWNER}/${REPO_NAME}/pulls"
