--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "18.0.0",
-    "react-native": "^0.69.2",
+    "react-native": "^0.70.14",
     "react-native-builder-bob": "^0.18.3",
     "react-test-renderer": "^18.2.0",
     "typescript": "^4.5.2"
@@ -67,7 +67,7 @@
   },
   "peerDependencies": {
     "react": "^17.0.2 || ^18.0.0",
-    "react-native": "^0.65.3 || ^0.66.0 || ^0.67.0 || ^0.68.0 || ^0.69.0 || ^0.70.0 || ^0.71.0 || ^0.72.0"
+    "react-native": "^0.65.3 || ^0.66.0 || ^0.67.0 || ^0.68.0 || ^0.69.0 || ^0.70.0 || ^0.71.0 || ^0.72.0 || ^0.73.0"
   },
   "jest": {
     "preset": "react-native",
