--- a/.github/workflows/update-refs-in-docs.yml
+++ b/.github/workflows/update-refs-in-docs.yml
@@ -3,7 +3,7 @@ name: Update references in Docsite
 on:
   push:
     branches:
-      - DEX-424/ref-test
+      - main
 
 jobs:
   generate-react-native-sdk-refs:
@@ -12,7 +12,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       with:
-        ref: DEX-424/ref-test
+        ref: main
         fetch-depth: 0
         persist-credentials: false
     
