--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -17,7 +17,7 @@ target 'SkyflowReactNativeExample' do
     # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => true,
     :fabric_enabled => flags[:fabric_enabled],
-    :flipper_configuration => FlipperConfiguration.enabled,
+#    :flipper_configuration => FlipperConfiguration.enabled,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
@@ -27,9 +27,20 @@ target 'SkyflowReactNativeExample' do
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
   # use_flipper!()
+  
+  def __apply_Xcode_15_post_install_workaround(installer)
+    # This is a workaround for Xcode 15, see: https://github.com/facebook/react-native/issues/37748.
+    puts "Applying Xcode 15 post install workaround"
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', '_LIBCPP_ENABLE_CXX17_REMOVED_UNARY_BINARY_FUNCTION']
+      end
+    end
+  end
 
   post_install do |installer|
     react_native_post_install(installer)
+    __apply_Xcode_15_post_install_workaround(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
