--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "android",
     "ios",
     "cpp",
+    "assets",
     "skyflow-react-native.podspec",
     "!lib/typescript/example",
     "!android/build",
