--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skyflow-react-native",
-  "version": "1.8.0-beta.1-dev.e6a06a3",
+  "version": "1.8.0-beta.1",
   "description": "Skyflow React Native SDK",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
