--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skyflow-react-native",
-  "version": "1.7.0",
+  "version": "1.8.0-beta.1",
   "description": "Skyflow React Native SDK",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -11,6 +11,7 @@
     "src",
     "lib",
     "android",
+    "assets",
     "ios",
     "cpp",
     "skyflow-react-native.podspec",
@@ -67,7 +68,7 @@
   },
   "peerDependencies": {
     "react": "^17.0.2 || ^18.0.0",
-    "react-native": "^0.65.3 || ^0.66.0 || ^0.67.0 || ^0.68.0 || ^0.69.0 || ^0.70.0 || ^0.71.0 || ^0.72.0 || ^0.73.0"
+    "react-native": "^0.65.3 || ^0.66.0 || ^0.67.0 || ^0.68.0 || ^0.69.0 || ^0.70.0 || ^0.71.0 || ^0.72.0 || ^0.73.0 || ^0.74.0 || ^0.75.0"
   },
   "jest": {
     "preset": "react-native",
